--- a/school.html
+++ b/school.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon"
         href="img/kisspng-computer-icons-textbook-education-book-now-button-5acae51cc460a3.4132910915232463648044.jpg" />
 
-    <link rel="stylesheet" href="ind.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
