--- a/school.html
+++ b/school.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 
 <head>
     <title>Lotem Elazar - Schools</title>
@@ -8,7 +9,8 @@
     <link rel="icon" type="image/x-icon"
         href="img/kisspng-computer-icons-textbook-education-book-now-button-5acae51cc460a3.4132910915232463648044.jpg" />
 
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="school_style.css">
 </head>
 
 <body>
